@@ -18,20 +18,25 @@ static OCINumber const_m1;   /*  -1 */
 static OCINumber const_PI2;  /* +PI/2 */
 static OCINumber const_mPI2; /* -PI/2 */
 
-#define SHRESHOLD_FMT (OraText*)"00000000000000000000000000"
-#define SHRESHOLD_FMT_LEN (sizeof(SHRESHOLD_FMT) - 1)
-#define SHRESHOLD_VAL (OraText*)"10000000000000000000000000"
-#define SHRESHOLD_VAL_LEN (sizeof(SHRESHOLD_VAL) - 1)
+#define SHRESHOLD_FMT_STR "00000000000000000000000000"
+#define SHRESHOLD_FMT (OraText*)SHRESHOLD_FMT_STR
+#define SHRESHOLD_FMT_LEN (sizeof(SHRESHOLD_FMT_STR) - 1)
+#define SHRESHOLD_VAL_STR "10000000000000000000000000"
+#define SHRESHOLD_VAL (OraText*)SHRESHOLD_VAL_STR
+#define SHRESHOLD_VAL_LEN (sizeof(SHRESHOLD_VAL_STR) - 1)
 static OCINumber const_shreshold;
 
 /* TODO: scale: -84 - 127 */
-#define NUMBER_FORMAT1 (OraText*)"FM9999999999999999999999990.9999999999999999999999999999999999999"
-#define NUMBER_FORMAT1_LEN (sizeof(NUMBER_FORMAT1) - 1)
-#define NUMBER_FORMAT2 (OraText*)"FM99999999999999999999999999999999999990.999999999999999999999999"
-#define NUMBER_FORMAT2_LEN (sizeof(NUMBER_FORMAT2) - 1)
-#define NUMBER_FORMAT2_DECIMAL                          (sizeof("999999999999999999999999") - 1)
-#define NUMBER_FORMAT_INT (OraText*)"FM99999999999999999999999999999999999990"
-#define NUMBER_FORMAT_INT_LEN (sizeof(NUMBER_FORMAT_INT) - 1)
+#define NUMBER_FORMAT1_STR "FM9999999999999999999999990.9999999999999999999999999999999999999"
+#define NUMBER_FORMAT1 (OraText*)NUMBER_FORMAT1_STR
+#define NUMBER_FORMAT1_LEN (sizeof(NUMBER_FORMAT1_STR) - 1)
+#define NUMBER_FORMAT2_STR "FM99999999999999999999999999999999999990.999999999999999999999999"
+#define NUMBER_FORMAT2 (OraText*)NUMBER_FORMAT2_STR
+#define NUMBER_FORMAT2_LEN (sizeof(NUMBER_FORMAT2_STR) - 1)
+#define NUMBER_FORMAT2_DECIMAL                              (sizeof("999999999999999999999999") - 1)
+#define NUMBER_FORMAT_INT_STR "FM99999999999999999999999999999999999990"
+#define NUMBER_FORMAT_INT (OraText*)NUMBER_FORMAT_INT_STR
+#define NUMBER_FORMAT_INT_LEN (sizeof(NUMBER_FORMAT_INT_STR) - 1)
 
 #define _NUMBER(val) ((OCINumber *)DATA_PTR(val)) /* dangerous macro */
 
