@@ -1,3 +1,6 @@
+2007-02-14  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/ocinumber.c: fix a bug created by the previous commit.
+
 2007-01-28  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oci8.h: add TO_ORATEXT, TO_CHARPTR and RSTRING_ORATEXT
 	    macros to suppress 'differ in signedness' warinings.
